# openmeshLearning

./: .gitignore  CMakeLists.txt
reference/: OpenMeshUserGuide.cpp  OpenMeshWrapper.h
src/: CMakeLists.txt
src/startUseOpenMesh/: CMakeLists.txt  CMakeLists.txt.bak  SetFacesColor.cpp
